# NTFS_Parser_MCP

./: README.md  mcp_server.py  pyproject.toml  requirements.txt
