[project]
name = "ntfs-parser-mcp"
version = "1.0.0"
description = "NTFS Forensic Parser as MCP Server - MFT / LogFile / UsnJrnl:$J Analysis Tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "amier-ge"}
]
keywords = ["ntfs", "forensics", "mcp", "mft", "usnjrnl", "logfile"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Filesystems",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "construct>=2.10.68",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
e01 = ["libewf-python>=20231119"]

[project.scripts]
ntfs-parser-mcp = "mcp_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
